add engines.node version to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "owl-carousel",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "10.6.3"
+  },
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
