--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "10.6.3"
+    "node": "12.x"
   },
   "dependencies": {
     "react": "^16.13.1",
