--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "owl-carousel",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./owl-carousel",  
   "engines": {
     "node": "12.x"
   },
